correction misalignement

--- a/src/styles/pages/experiences.module.css
+++ b/src/styles/pages/experiences.module.css
@@ -1,9 +1,10 @@
 .experiences_container{
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: center;
 	flex-direction: column;
 	.title{
+		width: 100%;
 		text-align: center;
 		margin-top: 10rem;
 		color: #ffffff;
